se añade el correo a el apartado author en package.json

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "Jesus Charbel Rodriguez Franco 320052765",
+  "author": "Jesus Charbel Rodriguez Franco 320052765 jesusrodriguez65@aragon.unam.mx",
   "license": "ISC",
   "description": ""
 }
